# autosteerMPC

./: .gitignore  README.md  tokei_report_1009.json
arduino/vehicleController/: vehicleController.ino
c_types/: c_wrapper.py  demo_c.c
c_types/minimal_simulink_model/: defines.txt  ert_main.c  minimal_one.c  minimal_one.h  minimal_one.mk  rtwtypes.h
camera/: camera.py  cv_process.py
coordinator/: actuator_bridge.py  coordinator.py  cv_process.py  health_checker.py  impulses.py  lidar.ini  mpc_bridge.py  parameters.py  path_manager.py  sensor_fuser.py  setup_vehicle.md
cv/: VideoStreamTester.py  curve_calculator.py  edge_image_preprocessor.py  image_preprocessor.py  image_warper.py  lane_recognizer.py  lanes_straight_recognition.py  second_order_edge_recognizer.py  second_order_lane_recognizer.py
cv/src/: VideoStreamTester.py  image_warper.py  lane_recognizer.py  lanes_curved_recognition.py  lanes_straight_recognition.py  second_order_lane_recognizer.py
gps_sensor/: gps_sensor.py  readme.md
gyroscope/: README.md  gyroscope_sensor.py
investigate_stupid_matlab/: cv_simple.slx  designer_session_cv_simple.mat  generate_mpc_object.m  generate_ss_representation.m  model.slx  model_cv_simple.slx  model_gps_unconstr.slx  mpc_cv_obst.m  mpc_cv_simple.m  mpc_cv_simple_discrete.m  mpc_gps_obst.m  mpc_gps_unconstr.m  ss_cv_obst.m
lidar/: CMakeLists.txt  README.md  lidar.cpp  lidar.ini
mpc/: aMPC_for_embedded.slx  adaptive_mpc_simulink.slx  emerging_model.m  emerging_simulink_model.slx  generate_blind_mpc.m  generate_mpc_blind_collision.m  generate_mpc_cv.m  mpc_object_generator.m  state_space_vehicle_model.m  vehicle_parameters.m
mpc_dlib/: CMakeLists.txt  mpc_blind.cpp  mpc_controller.cpp  mpc_cv_test.cpp  mpc_distance.cpp  mpc_distance_test.cpp  mpc_follow_lane.cpp  mpc_test.cpp  standalone_test.cpp
mpc_implementation/: CMakeLists.txt  mpc_cv_obst.cpp  mpc_cv_obst_ss.cpp  mpc_cv_obst_test.cpp  mpc_cv_unconstr.cpp  mpc_cv_unconstr_ss.cpp  mpc_cv_unconstr_test.cpp  mpc_gps_obst.cpp  mpc_gps_obst_ss.cpp  mpc_gps_obst_test.cpp  mpc_gps_unconstr.cpp  mpc_gps_unconstr_ss.cpp  mpc_gps_unconstr_test.cpp
mpc_old/: aMPC_for_embedded.slx  aMPC_for_embedded_with_subsystem.slx  emerging_model.m  foobarnew.m  generate_mpc_blind_collision.m  generate_mpc_cv.m  mpc_object.mat  test_for_stability.m  vehicle_parameters.m
mpc_old/experiments/: minimal_with_interface.slx  simulink_tcp_try_1.slx
mpc_old/resources/project/: ProjectData.type.Info.xml
mpc_simulation/: generate_mpc_object.m  model.slx  model_cv_obst.slx  model_cv_simple.slx  model_gps_obst.slx  model_gps_unconstr.slx  model_gps_unconstr_route.slx  mpc_cv_obst.m  mpc_cv_simple_discrete.m  mpc_cv_unconstr.m  mpc_gps_obst.m  mpc_gps_unconstr.m  ss_cv_obst.m  ss_cv_simple.m  ss_gps_obst.m  ss_gps_unconstr.m
scripts/: start_gps_monitor.sh
ultrasonic/: ultrasonic_sensor.py
utils/: camera_test.sh  get_temperature.sh  periodic_pics.sh  regex_extractor.py
wayplan/: data_loader.py  edge_generator.py  file_reader.py  length_calculator.py  name_generator.py  result_writer.py  route_planner.py  target_trajectory.txt
wayplan/resources/: mini_map_ch.txt  way_graph_raw.txt
wayplan/src/: data_loader.py  edge.py  edge_generator.py  file_reader.py  length_calculator.py  name_generator.py  route_planner.py
